# auto-round

./: eval_hf.sh  eval_hf_8b_ar_mxfp4_iters200_rht.sh  eval_hf_8b_ar_mxfp4_rtn_rht.sh  eval_hf_ht.sh  eval_test.sh  eval_test_hf.sh  eval_test_ttt.sh  eval_vllm_8b_autoround_mxfp4_rtn.sh  hadamard_innovation.md  run_eval.sh  setup.cfg  t_infer.py  t_inference.py  t_mxfp4.py  t_mxfp4_autoround.py  t_mxfp4_rtn.py  t_mxfp4_rtn_ht.py  t_mxint4_rtn.py  t_mxint4_rtn_ht.py
auto_round/: autoround.py  formats.py  wrapper.py
copilot/: command-history-state.json  config.json  permissions-config.json  session-store.db-shm  session-store.db-wal  settings.json
docs/: block_lifecycle_architecture_analysis.md  code_quality_fixes.md  code_review_fixes.md  compressors_new_decoupling_analysis.md  entry_py_conflict_analysis.md  input_wrapper_vs_embed_fusion.md  llm_compressor_rotation_analysis.md  online_r1_wrapper_and_rotation_size.md  online_vs_offline_r1_after_quantization.md  quark_rotation_analysis.md  quark_vs_autoround_wrapper_architecture.md  r3_r4_online_rotation.md  rotation_guide.md  rotation_save_load_solution.md  rotation_scheme_compatibility.md  rotation_serialization_proposal.md  selective_rotation_vllm_save.md  spinquant_quarot_api_guide.md  spinquant_quarot_api_guide_v2.md  spinquant_refactoring_proposal.md  step_by_step.md  step_by_step_CN.md  test_catalog.md  three_way_framework_comparison.md  triton_mxfp4_community_research.md  vram_analysis.md  wrapper_vs_hook_refactoring_analysis.md
examples-new/: VLLM_ROTATION_SUPPORT.md  benchmark_qdq_kernels.py  eval_from_disk.py  (+16 more)
(+240 files in other folders)
