[metadata]
license_files =
   LICENSE
   third-party-programs.txt

[options.entry_points]
console_scripts =
    auto_round = auto_round.__main__:run
    auto-round = auto_round.__main__:run
    auto_round_eval = auto_round.__main__:run_eval
    auto-round-eval = auto_round.__main__:run_eval
    auto_round_mllm = auto_round.__main__:run_mllm
    auto-round-mllm = auto_round.__main__:run_mllm
    auto-round-fast = auto_round.__main__:run_fast
    auto_round_fast = auto_round.__main__:run_fast
    auto-round-best = auto_round.__main__:run_best
    auto_round_best = auto_round.__main__:run_best
    auto-round-light = auto_round.__main__:run_light
    auto_round_light = auto_round.__main__:run_light
    auto-round-lib-install = auto_round_extension.ark.install_kernel:main

vllm.general_plugins =
    auto_round_extension = auto_round_extension.vllm_ext.sitecustomize:register_auto_round_vllm_plugin
    spinquant_mxfp4 = auto_round.vllm_plugin.register:register


